Fixing nav alignment once more

--- a/HungryatCMU/HungryApp/static/css/override.css
+++ b/HungryatCMU/HungryApp/static/css/override.css
@@ -120,7 +120,6 @@ h3.panel-title {
 	border-left: 1px dotted #a3a3a3;
 	margin-bottom: 30px;
 	padding: 24px 8px 18px 8px;
-
 }
 
 .content-well {
@@ -137,5 +136,5 @@ h3.panel-title {
 }
 
 #plate-pic {
-  margin-right: 30px;
+  margin-right: 20px;
 }
